kubernetes/apollo/apps/monitoring/kube-ops-view/app/httproute.yaml
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: &app kube-ops-view
spec:
  parentRefs:
    - name: envoy-internal
      namespace: network
      sectionName: https
  hostnames:
    - "kube-ops-view-apollo.${SECRET_DOMAIN}"
  rules:
    - backendRefs:
        - name: *app
          port: 8080
      timeouts:
        request: 0s
        backendRequest: 0s
